# kubectl-pod-debug

./: Cargo.toml  LICENSE  README.md  README_zh.md  install.sh  release.yml
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-05-23-kubectl-pod-debug.md  2026-05-26-kubectl-dbg-v3-implementation.md
docs/superpowers/specs/: 2026-05-23-kubectl-pod-debug-design.md  2026-05-26-kubectl-dbg-v3-design.md
src/: cli.rs  error.rs  main.rs
src/ai/: analyzer.rs  client.rs  mod.rs
src/diff/: collector.rs  comparator.rs  mod.rs
src/k8s/: client.rs  mod.rs  node.rs  pod.rs
src/network/: connectivity.rs  diag.rs  dns.rs  mod.rs  resolve.rs  targets.rs
src/nsenter/: builder.rs
src/report/: assist.rs  collector.rs  formatter.rs  mod.rs  pcap.rs
src/runtime/: containerd.rs  detector.rs  docker.rs  mod.rs
src/ssh/: connect.rs  exec.rs  mod.rs
src/timeline/: events.rs  formatter.rs  mod.rs
